<resources>
    <string name="app_name">Pronto Salon</string>
    <string name="client_list">Client List</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_main_image">main image</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!--Material design icons-->
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_chat">&#xe801;</string>
    <string name="material_icon_phone">&#xe802;</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="title_activity_client_list">ClientListActivity</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
</resources>
