<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.okason.prontosalon"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/margin_padding_small"
    android:layout_marginRight="@dimen/margin_padding_small"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/client_list_background" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:layout_margin="8dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/client_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_main_image"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp" >

            <com.okason.prontosalon.util.RobotoTextView
                android:id="@+id/text_view_client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="ArtistName"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:typeface="robotoLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.okason.prontosalon.util.RobotoTextView
                    android:id="@+id/text_view_last_seen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Last seen: "
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:typeface="robotoItalic" />

                <com.okason.prontosalon.util.RobotoTextView
                    android:id="@+id/text_view_blank_for_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:typeface="robotoItalic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.okason.prontosalon.util.RobotoTextView
                    android:id="@+id/text_view_last_appointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:typeface="robotoItalic" />

                <com.okason.prontosalon.util.RobotoTextView
                    android:id="@+id/text_view_blank_for_now2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:typeface="robotoItalic" />

            </LinearLayout>

            <com.okason.prontosalon.util.RobotoTextView
                android:id="@+id/text_view_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:layout_marginTop="32dp"
                android:text="@string/lorem_ipsum_long"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:typeface="robotoRegular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="right|bottom"
                android:layout_gravity="right|bottom" >

                <com.okason.prontosalon.util.MaterialDesignIconsTextView
                    android:id="@+id/list_item_google_cards_media_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_like"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <com.okason.prontosalon.util.MaterialDesignIconsTextView
                    android:id="@+id/list_item_google_cards_media_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_favorite"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <com.okason.prontosalon.util.MaterialDesignIconsTextView
                    android:id="@+id/list_item_google_cards_media_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:padding="8dp"
                    android:text="@string/material_icon_share"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>